# distcom

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  main.rs  old_.env
executer_client/: Cargo.toml
executor_client/: .env  Cargo.toml  Dockerfile  Dockerfile copy  Makefile  docker-compose.yml  install
executor_client/src/: main.rs
executor_client/src/commands/: get_organization_programs.rs  get_organizations.rs  get_programs.rs  mod.rs
executor_client/src/common/: communication.rs  config.rs  general_constants.rs  mod.rs
executor_client/src/config/: qa.json
executor_client/src/models/: mod.rs  returned_organization.rs  returned_program.rs
executor_client/src/runner/: mod.rs  proof_generator.rs
executor_client/src/runner/prover/: Cargo.toml
executor_client/src/runner/prover/src/: main.rs
executor_client/src/service/: server_requests.rs
executor_client/src/services/: mod.rs  program_distributor.rs  server_requests.rs
executor_client/src/utils/: compression.rs  mod.rs  process_inputs.rs  proving.rs
handlers/: goodbye.rs  mod.rs  two.rs  unpack_folders.rs
middleware/: upload_file.rs
program_distributor/: .env  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
program_distributor/migrations/2024-05-04-194245_create_posts/: up.sql
program_distributor/migrations/2024-06-06-003255_create_posts/: down.sql  up.sql
program_distributor/migrations/2024-08-09-042031_create_posts/: down.sql  up.sql
program_distributor/mysql_diesel_async_migration/embed_migrations_macro_function/src/: embed_migrations.rs
program_distributor/mysql_diesel_async_migration/src/: lib.rs
program_distributor/src/: main.rs  schema.rs
program_distributor/src/common/: app_error.rs  app_http_response_builder.rs  config.rs  general_constants.rs  mod.rs
program_distributor/src/components/: mod.rs
program_distributor/src/components/account/: account_mysql_dal.rs  controller.rs  model.rs  route.rs  service.rs  utils.rs
program_distributor/src/components/account/db_models/: account.rs  mod.rs  refresh_token.rs
program_distributor/src/components/program/: controller.rs  model.rs  program_mysql_dal.rs  route.rs  service.rs  utils.rs
program_distributor/src/components/program/db_models/: program.rs  program_input_group.rs  specific_program_input.rs
program_distributor/src/config/: qa.json
program_distributor/src/handlers/: mod.rs  unpack_folders.rs
program_distributor/src/middlewares/: callable_upload_file.rs  mod.rs  upload_file.rs  validate_jwt.rs
program_distributor/src/services/: mod.rs
program_distributor/src/services/files_storage/: aws_s3_handler.rs  file_storage.rs
program_distributor/src/utils/: actix_helpers.rs  datetime_helpers.rs  diesel_helpers.rs  file_helpers.rs  general_controller_helpers.rs  jwt_helpers.rs  local_storage_helpers.rs  mod.rs
risc_0_examples/probabilistic_fermat_test/methods/guest/: Cargo.toml
risc_0_examples/probabilistic_fermat_test/methods/guest/src/: main.rs
server/: .env  Cargo.toml  main.rs
server/async_diesel_migration/: Cargo.toml
server/async_diesel_migration/src/: embed_migrations.rs  mod.rs
server/handlers/: index.rs  mod.rs
server/middleware/: upload_file.rs
server/middlewares/: upload_file.rs
server/migrations/2024-03-24-003322_create_posts/: down.sql  up.sql
server/migrations/2024-04-03-210611_create_posts/: down.sql  up.sql
server/migrations/2024-04-24-214424_create_posts/: down.sql  up.sql
server/migrations/2024-04-27-205656_create_posts/: down.sql  up.sql
server/migrations/2024-05-04-194245_create_posts/: down.sql
server/mysql_diesel_async_migration/: Cargo.toml
server/mysql_diesel_async_migration/embed_migrations_macro_function/: Cargo.toml
server/mysql_diesel_async_migration/embed_migrations_macro_function/src/: lib.rs
server/mysql_diesel_async_migration/src/: lib.rs
server/proven_code_template/template/guest/: Cargo.toml
server/proven_code_template/template/guest/src/: main.rs
server/src/: main.rs  schema.rs
server/src/common/: app_error.rs  app_http_response_builder.rs  config.rs  lazy_initialize.rs  mod.rs  server_dependencies.rs
server/src/component/account/: service.rs
server/src/components/account/: account_mysql_dal.rs  controller.rs  dal.rs  mod.rs  model.rs  route.rs  service.rs  utils.rs
server/src/components/account/db_models/: account.rs  refresh_token.rs
server/src/components/program/: controller.rs  mod.rs  model.rs  program_mysql_dal.rs  route.rs  service.rs
server/src/components/program/db_models/: account.rs  mod.rs  program.rs  program_input_group.rs  refresh_token.rs  specific_program_input.rs
server/src/config/: dev.json  qa.json
server/src/handlers/: goodbye.rs  greet.rs
server/src/middlewares/: callable_upload_file.rs  mod.rs  test.rs  upload_file.rs  upload_file_copy.rs  validate_jwt.rs
server/src/services/: database.rs
server/src/services/files_storage/: aws_s3_handler.rs  file_storage.rs  mod.rs
server/src/utils/: file_helpers.rs  jwt_helpers.rs  local_storage_helpers.rs  mod.rs
server/src/utils/async_diesel_migration/: mod.rs
uploader_client/: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
uploader_client/src/: main.rs
uploader_client/src/commands/: get_input_groups.rs  get_programs.rs  get_proofs.rs  get_proven_programs.rs  mod.rs  verify_proofs.rs
uploader_client/src/common/: communication.rs  config.rs  mod.rs  user_interaction.rs
uploader_client/src/config/: qa.json
uploader_client/src/models/: mod.rs  returned_input_group.rs  returned_program.rs  returned_proof.rs
uploader_client/src/runner/: Cargo.toml
uploader_client/src/runner/prover/src/: main.rs
uploader_client/src/runner/verifier/: Cargo.toml
uploader_client/src/runner/verifier/src/: main.rs
uploader_client/src/services/: mod.rs  program_distributor.rs  server_requests.rs
uploader_client/src/utils/: compression.rs  local_storage_helpers.rs  mod.rs  process_inputs.rs  starks_verification.rs  verifying.rs
uploader_client/src/verifier/: starks_verification.rs
(+54 files in other folders)
