[package]
name = "uploader_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
shlex = "1.3.0"
tar = "0.4.40"
# reqwest = { version = "0.11", features = ["blocking", "json"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde_derive = "1.0.200"
lazy_static = "1.4.0"
serde_json = "1.0.116"
serde = "1.0.200"
csv = "1.3.0"
risc0-zkvm = "0.21.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.7.1"
