[package]
name = "uploader_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.202"
serde_derive = "1.0.202"
serde_json = "1.0.117"
tar = "0.4.40"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
lazy_static = "1.4.0"
futures-util = "0.3.30"
rpassword = "7.3.1"
