[package]
name = "mysql_diesel_async_migration"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "migrations for diesel_async"

[dependencies]
embed_migrations_macro_function = { path = "./embed_migrations_macro_function", version = "0.1" }

# diesel-async = { version = "0.4", features = [ "mysql" ] }
diesel-async = { version = "0.4.1", features = ["mysql"] }

# diesel = "2"
diesel = { version = "2.1.4", features = ["mysql"] }
scoped-futures = "0.1.3"
tracing = "0.1.37"


[dev-dependencies]
lazy_static = "1.4"

# [workspace]
# members = [ "./embed_migrations_macro_function" ]
